[gd_scene load_steps=7 format=3 uid="uid://f4jcapbxpx0s"]

[ext_resource type="Script" path="res://scenes/enemies/shooty_enemy.gd" id="1_ph5i5"]
[ext_resource type="PackedScene" uid="uid://be2xlyje1b3ky" path="res://components/health.tscn" id="2_tku7j"]
[ext_resource type="Texture2D" uid="uid://cmxw3aw5ve1vt" path="res://Assets/rocket_man.png" id="3_454b0"]
[ext_resource type="Script" path="res://scenes/enemies/rocket.gd" id="4_760wt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1bip"]
size = Vector2(17, 32)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hltok"]

[node name="ShootyEnemy" type="Node2D"]
scale = Vector2(1.62062, 1.62062)
script = ExtResource("1_ph5i5")

[node name="Health" parent="." instance=ExtResource("2_tku7j")]

[node name="EnemyBody" type="RigidBody2D" parent="."]
collision_layer = 15

[node name="ShootPosition" type="Marker2D" parent="EnemyBody"]
position = Vector2(0, -18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_q1bip")

[node name="Sprite2D" type="Sprite2D" parent="EnemyBody"]
texture_filter = 1
texture = ExtResource("3_454b0")

[node name="RocketBody" type="RigidBody2D" parent="."]
position = Vector2(4, 1)
collision_layer = 240
gravity_scale = 0.0
script = ExtResource("4_760wt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RocketBody"]
shape = SubResource("SegmentShape2D_hltok")
